user signup flow completed with email verififcation

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,6 @@ TYPEORM_MIGRATIONS_DIR = src/database/migration
 TYPEORM_SUBSCRIBERS = src/database/subscriber/**/*.ts
 TYPEORM_SUBSCRIBERS_DIR = src/database/subscriber
 
+IDENTITY_SERVICE_URL=
+NOTIFICATION_SERVICE_URL=
+CORE_SERVICE_URL=
