env.example updated

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,13 @@ TYPEORM_MIGRATIONS_DIR = src/database/migration
 TYPEORM_SUBSCRIBERS = src/database/subscriber/**/*.ts
 TYPEORM_SUBSCRIBERS_DIR = src/database/subscriber
 
-IDENTITY_SERVICE_URL=
-NOTIFICATION_SERVICE_URL=
+IDENTITY_SERVICE_URL= http://localhost:3000/zapi-identity
+NOTIFICATION_SERVICE_URL=http://localhost:3002/zapi-notify
 CORE_SERVICE_URL=
+ACCESS_SECRET=rosicky
+ACCESS_TIME=365d
+REFRESH_SECRET=rosicky
+REFRESH_TIME=365d
+RESET_TIME=365d
+RESET_SECRET=rosicky
+JWT_VERIFICATION_TOKEN_SECRET=rosicky
