--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.0.5",
     "@nestjs/typeorm": "^9.0.0",
+    "amqp-connection-manager": "^4.1.6",
+    "amqplib": "^0.10.2",
     "axios": "^0.27.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
