--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,6 @@ REFRESH_TIME=365d
 RESET_TIME=365d
 RESET_SECRET=rosicky
 JWT_VERIFICATION_TOKEN_SECRET=rosicky
+
+RABBITMQ_QUEUE=identity_queue
+RABBITMQ_URL=amqps://ulbcyobf:0fr6ncJnuS43_CU-ULt0h-YsBWWQtT4t@chimpanzee.rmq.cloudamqp.com/ulbcyobf
