--- a/.env.example
+++ b/.env.example
@@ -42,4 +42,6 @@ JWT_VERIFICATION_TOKEN_SECRET=rosicky
 
 IDENTITY_QUEUE=identity_queue
 NOTIFY_QUEUE=notify_queue
+DEV_IDENTITY_QUEUE=dev_identity_queue
+DEV_NOTIFY_QUEUE=dev_notify_queue
 RABBITMQ_URL=amqps://ulbcyobf:0fr6ncJnuS43_CU-ULt0h-YsBWWQtT4t@chimpanzee.rmq.cloudamqp.com/ulbcyobf
