signup flow completed using axios calls to profile and notification service

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,8 @@ TYPEORM_SUBSCRIBERS_DIR = src/database/subscriber
 
 IDENTITY_SERVICE_URL= http://localhost:3000/zapi-identity
 NOTIFICATION_SERVICE_URL=http://localhost:3002/zapi-notify
+IDENTITY_SERVICE_FE_URL= http://localhost:5173/forgot-password
+IDENTITY_FE_COMPLETE_SIGNUP=http://localhost:5173/users/verify
 CORE_SERVICE_URL=
 ACCESS_SECRET=rosicky
 ACCESS_TIME=365d
