--- a/.env.example
+++ b/.env.example
@@ -28,8 +28,8 @@ TYPEORM_MIGRATIONS_DIR = src/database/migration
 TYPEORM_SUBSCRIBERS = src/database/subscriber/**/*.ts
 TYPEORM_SUBSCRIBERS_DIR = src/database/subscriber
 
-IDENTITY_SERVICE_URL= http://localhost:3000/zapi-identity
-NOTIFICATION_SERVICE_URL=http://localhost:3002/zapi-notify
+IDENTITY_SERVICE_URL= http://localhost:3000/api/v1
+NOTIFICATION_SERVICE_URL=http://localhost:3002/api/v1
 IDENTITY_SERVICE_FE_URL= http://localhost:5173/forgot-password
 IDENTITY_FE_COMPLETE_SIGNUP=http://localhost:5173/users/verify
 CORE_SERVICE_URL=
