added core service url to env.example file

--- a/.env.example
+++ b/.env.example
@@ -32,7 +32,7 @@ IDENTITY_SERVICE_URL= http://localhost:3000/api/v1
 NOTIFICATION_SERVICE_URL=http://localhost:3002/api/v1
 IDENTITY_SERVICE_FE_URL= http://localhost:5173/forgot-password
 IDENTITY_FE_COMPLETE_SIGNUP=http://localhost:5173/users/verify
-CORE_SERVICE_URL=
+CORE_SERVICE_URL=http://localhost:3001/api/v1
 ACCESS_SECRET=rosicky
 ACCESS_TIME=365d
 REFRESH_SECRET=rosicky
