--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
+    "google-auth-library": "^8.6.0",
     "node-url-shortener": "^2.0.3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
