--- a/.env.example
+++ b/.env.example
@@ -47,4 +47,4 @@ NOTIFY_QUEUE=notify_queue
 DEV_IDENTITY_QUEUE=dev_identity_queue
 DEV_NOTIFY_QUEUE=dev_notify_queue
 RABBITMQ_URL=amqps://ulbcyobf:0fr6ncJnuS43_CU-ULt0h-YsBWWQtT4t@chimpanzee.rmq.cloudamqp.com/ulbcyobf
-GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_ID=1053295469648-6k70pt4pl5b205ugmu09ru9dpo3ioqvf.apps.googleusercontent.com
