--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,5 @@ DEV_NOTIFY_QUEUE=dev_notify_queue
 RABBITMQ_URL=amqps://ulbcyobf:0fr6ncJnuS43_CU-ULt0h-YsBWWQtT4t@chimpanzee.rmq.cloudamqp.com/ulbcyobf
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
