--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "google-auth-library": "^8.6.0",
+    "moment": "^2.29.4",
     "node-url-shortener": "^2.0.3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
